# Gradience

./: .gitignore  .gitmodules  CHANGELOG.md  HACKING.md  MAINTAINERS.md  README.md  SECURITY.md  gradience.doap  meson.build  requirements.txt
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-bin.yml  build.yml  dependency-review.yml  greetings.yml  pypi-dependencies.yml  pysa.yml  repo.yml  translation.yml  typos.yml
build-aux/flatpak/: com.github.GradienceTeam.Gradience.Devel.json  com.github.GradienceTeam.Gradience.json  com.github.hydroxycarbamide.Gradience.Devel.json  com.github.hydroxycarbamide.Gradience.json  pypi-dependencies.json
data/: com.github.GradienceTeam.Gradience.appdata.xml.in.in  com.github.hydroxycarbamide.Gradience.appdata.xml.in.in  com.github.hydroxycarbamide.Gradience.gschema.xml.in  gradience.gresource.xml
data/presets/: adwaita-dark.json  adwaita.json
data/ui/: app_type_dialog.blp  error_list_row.blp  log_out_dialog.blp  meson.build  monet_theming_group.blp  no_plugin_window.blp  option_row.blp  preferences_dialog.blp  (+7 more)
gradience/: meson.build
gradience/frontend/views/: about_dialog.py  meson.build  plugins_list_mock.py  preferences_dialog.py  preferences_window.py  presets_manager_window.py  shell_prefs_window.py  welcome_window.py
po/: Gradience.pot  POTFILES  ar.po  az.po  cs.po  de.po  es.po  eu.po  fi.po  fr.po  he.po  hi.po  hr.po  id.po  it.po  ko.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sr.po  sv.po  ta.po  tr.po  uk.po  zh_Hans.po
(+19 files in other folders)
