viewsdir = 'gradience/frontend/views'

gradience_sources = [
    '__init__.py',
    'about_dialog.py',
    'main_window.py',
    'no_plugin_window.py',
    'plugins_list_mock.py',
    'preferences_dialog.py',
    'presets_manager_window.py',
    'share_window.py',
    'shell_prefs_window.py',
    'welcome_window.py'
]
PY_INSTALLDIR.install_sources(gradience_sources, subdir: viewsdir)
